// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`fetching conversion hosts is pending 1`] = `
Object {
  "conversionHostWizardMounted": false,
  "conversionHostWizardVisible": false,
  "conversionHosts": Array [],
  "errorFetchingConversionHosts": null,
  "errorFetchingServers": null,
  "errorFetchingSettings": null,
  "errorPostingConversionHosts": null,
  "errorSavingSettings": null,
  "fetchingServersRejected": false,
  "fetchingSettingsRejected": false,
  "isFetchingConversionHosts": true,
  "isFetchingServers": false,
  "isFetchingSettings": false,
  "isPostingConversionHosts": false,
  "isRejectedConversionHosts": false,
  "isRejectedPostingConversionHosts": false,
  "isSavingSettings": false,
  "postConversionHostsResults": Array [],
  "savedSettings": Object {},
  "savingSettingsRejected": false,
  "servers": Array [],
}
`;

exports[`fetching conversion hosts is rejected 1`] = `
Object {
  "conversionHostWizardMounted": false,
  "conversionHostWizardVisible": false,
  "conversionHosts": Array [],
  "errorFetchingConversionHosts": "error",
  "errorFetchingServers": null,
  "errorFetchingSettings": null,
  "errorPostingConversionHosts": null,
  "errorSavingSettings": null,
  "fetchingServersRejected": false,
  "fetchingSettingsRejected": false,
  "isFetchingConversionHosts": false,
  "isFetchingServers": false,
  "isFetchingSettings": false,
  "isPostingConversionHosts": false,
  "isRejectedConversionHosts": true,
  "isRejectedPostingConversionHosts": false,
  "isSavingSettings": false,
  "postConversionHostsResults": Array [],
  "savedSettings": Object {},
  "savingSettingsRejected": false,
  "servers": Array [],
}
`;

exports[`fetching conversion hosts is successful 1`] = `
Object {
  "conversionHostWizardMounted": false,
  "conversionHostWizardVisible": false,
  "conversionHosts": Array [
    Object {
      "mock": "conversionHost",
    },
  ],
  "errorFetchingConversionHosts": null,
  "errorFetchingServers": null,
  "errorFetchingSettings": null,
  "errorPostingConversionHosts": null,
  "errorSavingSettings": null,
  "fetchingServersRejected": false,
  "fetchingSettingsRejected": false,
  "isFetchingConversionHosts": false,
  "isFetchingServers": false,
  "isFetchingSettings": false,
  "isPostingConversionHosts": false,
  "isRejectedConversionHosts": false,
  "isRejectedPostingConversionHosts": false,
  "isSavingSettings": false,
  "postConversionHostsResults": Array [],
  "savedSettings": Object {},
  "savingSettingsRejected": false,
  "servers": Array [],
}
`;

exports[`fetching servers is pending 1`] = `
Object {
  "conversionHostWizardMounted": false,
  "conversionHostWizardVisible": false,
  "conversionHosts": Array [],
  "errorFetchingConversionHosts": null,
  "errorFetchingServers": null,
  "errorFetchingSettings": null,
  "errorPostingConversionHosts": null,
  "errorSavingSettings": null,
  "fetchingServersRejected": false,
  "fetchingSettingsRejected": false,
  "isFetchingConversionHosts": false,
  "isFetchingServers": true,
  "isFetchingSettings": false,
  "isPostingConversionHosts": false,
  "isRejectedConversionHosts": false,
  "isRejectedPostingConversionHosts": false,
  "isSavingSettings": false,
  "postConversionHostsResults": Array [],
  "savedSettings": Object {},
  "savingSettingsRejected": false,
  "servers": Array [],
}
`;

exports[`fetching servers is rejected 1`] = `
Object {
  "conversionHostWizardMounted": false,
  "conversionHostWizardVisible": false,
  "conversionHosts": Array [],
  "errorFetchingConversionHosts": null,
  "errorFetchingServers": "error",
  "errorFetchingSettings": null,
  "errorPostingConversionHosts": null,
  "errorSavingSettings": null,
  "fetchingServersRejected": true,
  "fetchingSettingsRejected": false,
  "isFetchingConversionHosts": false,
  "isFetchingServers": false,
  "isFetchingSettings": false,
  "isPostingConversionHosts": false,
  "isRejectedConversionHosts": false,
  "isRejectedPostingConversionHosts": false,
  "isSavingSettings": false,
  "postConversionHostsResults": Array [],
  "savedSettings": Object {},
  "savingSettingsRejected": false,
  "servers": Array [],
}
`;

exports[`fetching settings is pending 1`] = `
Object {
  "conversionHostWizardMounted": false,
  "conversionHostWizardVisible": false,
  "conversionHosts": Array [],
  "errorFetchingConversionHosts": null,
  "errorFetchingServers": null,
  "errorFetchingSettings": null,
  "errorPostingConversionHosts": null,
  "errorSavingSettings": null,
  "fetchingServersRejected": false,
  "fetchingSettingsRejected": false,
  "isFetchingConversionHosts": false,
  "isFetchingServers": false,
  "isFetchingSettings": true,
  "isPostingConversionHosts": false,
  "isRejectedConversionHosts": false,
  "isRejectedPostingConversionHosts": false,
  "isSavingSettings": false,
  "postConversionHostsResults": Array [],
  "savedSettings": Object {},
  "savingSettingsRejected": false,
  "servers": Array [],
}
`;

exports[`fetching settings is rejected 1`] = `
Object {
  "conversionHostWizardMounted": false,
  "conversionHostWizardVisible": false,
  "conversionHosts": Array [],
  "errorFetchingConversionHosts": null,
  "errorFetchingServers": null,
  "errorFetchingSettings": "error",
  "errorPostingConversionHosts": null,
  "errorSavingSettings": null,
  "fetchingServersRejected": false,
  "fetchingSettingsRejected": true,
  "isFetchingConversionHosts": false,
  "isFetchingServers": false,
  "isFetchingSettings": false,
  "isPostingConversionHosts": false,
  "isRejectedConversionHosts": false,
  "isRejectedPostingConversionHosts": false,
  "isSavingSettings": false,
  "postConversionHostsResults": Array [],
  "savedSettings": Object {},
  "savingSettingsRejected": false,
  "servers": Array [],
}
`;

exports[`fetching settings is successful 1`] = `
Object {
  "conversionHostWizardMounted": false,
  "conversionHostWizardVisible": false,
  "conversionHosts": Array [],
  "errorFetchingConversionHosts": null,
  "errorFetchingServers": null,
  "errorFetchingSettings": null,
  "errorPostingConversionHosts": null,
  "errorSavingSettings": null,
  "fetchingServersRejected": false,
  "fetchingSettingsRejected": false,
  "isFetchingConversionHosts": false,
  "isFetchingServers": false,
  "isFetchingSettings": false,
  "isPostingConversionHosts": false,
  "isRejectedConversionHosts": false,
  "isRejectedPostingConversionHosts": false,
  "isSavingSettings": false,
  "postConversionHostsResults": Array [],
  "savedSettings": Object {
    "max_concurrent_tasks_per_host": 10,
  },
  "savingSettingsRejected": false,
  "servers": Array [],
}
`;

exports[`saving settings is pending 1`] = `
Object {
  "conversionHostWizardMounted": false,
  "conversionHostWizardVisible": false,
  "conversionHosts": Array [],
  "errorFetchingConversionHosts": null,
  "errorFetchingServers": null,
  "errorFetchingSettings": null,
  "errorPostingConversionHosts": null,
  "errorSavingSettings": null,
  "fetchingServersRejected": false,
  "fetchingSettingsRejected": false,
  "isFetchingConversionHosts": false,
  "isFetchingServers": false,
  "isFetchingSettings": false,
  "isPostingConversionHosts": false,
  "isRejectedConversionHosts": false,
  "isRejectedPostingConversionHosts": false,
  "isSavingSettings": true,
  "postConversionHostsResults": Array [],
  "savedSettings": Object {},
  "savingSettingsRejected": false,
  "servers": Array [],
}
`;

exports[`saving settings is rejected 1`] = `
Object {
  "conversionHostWizardMounted": false,
  "conversionHostWizardVisible": false,
  "conversionHosts": Array [],
  "errorFetchingConversionHosts": null,
  "errorFetchingServers": null,
  "errorFetchingSettings": null,
  "errorPostingConversionHosts": null,
  "errorSavingSettings": "error",
  "fetchingServersRejected": false,
  "fetchingSettingsRejected": false,
  "isFetchingConversionHosts": false,
  "isFetchingServers": false,
  "isFetchingSettings": false,
  "isPostingConversionHosts": false,
  "isRejectedConversionHosts": false,
  "isRejectedPostingConversionHosts": false,
  "isSavingSettings": false,
  "postConversionHostsResults": Array [],
  "savedSettings": Object {},
  "savingSettingsRejected": true,
  "servers": Array [],
}
`;

exports[`saving settings is successful 1`] = `
Object {
  "conversionHostWizardMounted": false,
  "conversionHostWizardVisible": false,
  "conversionHosts": Array [],
  "errorFetchingConversionHosts": null,
  "errorFetchingServers": null,
  "errorFetchingSettings": null,
  "errorPostingConversionHosts": null,
  "errorSavingSettings": null,
  "fetchingServersRejected": false,
  "fetchingSettingsRejected": false,
  "isFetchingConversionHosts": false,
  "isFetchingServers": false,
  "isFetchingSettings": false,
  "isPostingConversionHosts": false,
  "isRejectedConversionHosts": false,
  "isRejectedPostingConversionHosts": false,
  "isSavingSettings": false,
  "postConversionHostsResults": Array [],
  "savedSettings": Object {
    "max_concurrent_tasks_per_host": 10,
  },
  "savingSettingsRejected": false,
  "servers": Array [],
}
`;

exports[`sets default state 1`] = `
Object {
  "conversionHostWizardMounted": false,
  "conversionHostWizardVisible": false,
  "conversionHosts": Array [],
  "errorFetchingConversionHosts": null,
  "errorFetchingServers": null,
  "errorFetchingSettings": null,
  "errorPostingConversionHosts": null,
  "errorSavingSettings": null,
  "fetchingServersRejected": false,
  "fetchingSettingsRejected": false,
  "isFetchingConversionHosts": false,
  "isFetchingServers": false,
  "isFetchingSettings": false,
  "isPostingConversionHosts": false,
  "isRejectedConversionHosts": false,
  "isRejectedPostingConversionHosts": false,
  "isSavingSettings": false,
  "postConversionHostsResults": Array [],
  "savedSettings": Object {},
  "savingSettingsRejected": false,
  "servers": Array [],
}
`;
